<resources>
    <string name="app_name">Androidx</string>
    <string name="action_settings">Settings</string>

    <string name="pref_about_phone_sum">aboutPhoneSum</string>
    <string name="pref_about_phone_tittle">aboutPhoneTitle</string>
    <string name="pref_ringtone_tittle">ringtoneTitle</string>
    <string name="pref_ringtone_sum">ringToneSum</string>
    <string name="preference_blue_sum">preferenceBlueSum</string>
    <string name="preference_blue_tittle">preferenceBlueTitle</string>
    <string name="pref_fav_category_tittle">favCategoryTitle</string>
    <string name="pref_ed_name_sum">edNameSum</string>
    <string name="pref_ed_name_tittle">edNameTitle</string>
    <string name="pref_fav_title">favTitle</string>
    <string name="pref_fav_sum">favSum</string>
    <string name="pref_fav_contact_tittle">favContactTitle</string>
    <string name="pref_voicemail_tittle">voicemailTitle</string>
    <string name="pref_voicemail_sum">voicemailSum</string>

    <string name="round1" translatable="false">m 109.0,27.0 h 0.0 c 45.29,0.0,82.0,36.71,82.0,82.0 v 0.0 c 0.0,45.29,-36.71,82.0,-82.0,82.0 h 0.0 c -45.29,0.0,-82.0,-36.71,-82.0,-82.0 v 0.0 c 0.0,-45.29,36.71,-82.0,82.0,-82.0 L 109.0,27.0z</string>
    <string name="square1" translatable="false">m 80.0,69.0 h 60.0 c 5.52,0.0,10.0,4.48,10.0,10.0 v 60.0 c 0.0,5.52,-4.48,10.0,-10.0,10.0 h -60.0 c -5.52,0.0,-10.0,-4.48,-10.0,-10.0 v -60.0 c 0.0,-5.52,4.48,-10.0,10.0,-10.0 L 80.0,69.0z</string>

    <string name="and" translatable="false"><![CDATA[&]]></string>
    <string name="flag_string"> 1 <![CDATA[&]]> 任何数都是那个数本身\n 0 <![CDATA[&]]> 任何数都是0 \n 0 | 任何数都是那个数本身 \n 1 | 任何数都是 1</string>

    <string name="constraint">constraint</string>
    <string name="listView">listView</string>
    <string name="db">db</string>
    <string name="lock">lock</string>
    <string name="jni">jni</string>
    <string name="fragment">fragment</string>
    <string name="anim">anim</string>
    <string name="reflect">reflect</string>
    <string name="camera">camera</string>
    <string name="rcv">rcv</string>
    <string name="preference">preference</string>
    <string name="preference_fragment">preference_fragment</string>
    <string name="vector">vector</string>
    <string name="theme">theme</string>
    <string name="flag">flag</string>
    <string name="view">view</string>
    <string name="qqlogin">QQLogin</string>
    <string name="net">net</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
