<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference
        android:key="about_phone"
        android:summary="@string/pref_about_phone_sum"
        android:title="@string/pref_about_phone_tittle" />

    <SwitchPreference
        android:key="sw_perference"
        android:summary="@string/pref_about_phone_sum"
        android:title="@string/pref_about_phone_tittle" />

    <RingtonePreference
        android:key="pref_ring"
        android:summary="@string/pref_ringtone_tittle"
        android:title="@string/pref_ringtone_sum" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:icon="@null"
        android:key="pref_blue"
        android:summary="@string/preference_blue_sum"
        android:title="@string/preference_blue_tittle"
        android:widgetLayout="@layout/test" />

    <PreferenceCategory
        android:key="pref_fav_category"
        android:title="@string/pref_fav_category_tittle">
        <EditTextPreference
            android:key="fav_city"
            android:summary="@string/pref_ed_name_sum"
            android:title="@string/pref_ed_name_tittle" />

        <ListPreference
            android:dialogTitle="@string/pref_fav_title"
            android:entries="@array/fav_phone"
            android:entryValues="@array/fav_phone"
            android:key="pref_fav_phone"
            android:summary="@string/pref_fav_sum"
            android:title="@string/pref_fav_title" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="pref_contact_category"
        android:title="@string/pref_fav_contact_tittle" />

    <PreferenceScreen
        android:key="pre_voicemail_setting_key"
        android:persistent="false"
        android:title="@string/pref_voicemail_tittle">
        <Preference
            android:key="voice_mail"
            android:summary="@string/pref_voicemail_tittle"
            android:title="@string/pref_voicemail_sum">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="http://www.baidu.com" />
        </Preference>
    </PreferenceScreen>

</PreferenceScreen>